actividadnexcloud/moretime/nextcloud-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
spec:
  selector:
    app: nextcloud
  ports:
    - name: http
      port: 80
